# opengl-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  OpenGL Renderer.sln  OpenGLRendererConfig.h.in  README.md  TODO.md  build.sh
Debug/: OpenGL Renderer.ilk
Dependencies/assimp/lib/: assimp-vc142-mtd.exp
OpenGL Renderer/: OpenGL Renderer.vcxproj  OpenGL Renderer.vcxproj.filters
OpenGL Renderer/Debug/: vc141.idb
OpenGL Renderer/Debug/OpenGL Renderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL Renderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL Renderer/src/: source.cpp
OpenGL Renderer/src/DataStructure/: EnvironmentMap.h  Light.h  Material.h  Mesh.h  MeshHelper.h  RenderObject.h  Scene.h  Skybox.h  TUMPose.h
OpenGL Renderer/src/DataStructure/impl/: EnvironmentMap.cpp  Light.cpp  Material.cpp  Mesh.cpp  MeshHelper.cpp  RenderObject.cpp  Scene.cpp  Skybox.cpp
OpenGL Renderer/src/IO/: Header.h  KeyManager.h  ObjLoader.h
OpenGL Renderer/src/IO/impl/: KeyManager.cpp  ObjLoader.cpp
OpenGL Renderer/src/Math/: Functions.h  PerlinNoise.h
OpenGL Renderer/src/Math/impl/: Functions.cpp  FunctionsDetail.h  PerlinNoise.cpp
OpenGL Renderer/src/OpenGLObjects/: FrameBuffer.h  IndexBuffer.h  RenderBuffer.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
OpenGL Renderer/src/OpenGLObjects/impl/: FrameBuffer.cpp  IndexBuffer.cpp  RenderBuffer.cpp  Texture.cpp  TextureDetail.h  VertexArray.cpp  VertexBuffer.cpp
OpenGL Renderer/src/Renderer/: Camera.h  ParticleRenderer.h  RenderWindow.h  TerrainCreater.h  TextRenderer.h
OpenGL Renderer/src/Renderer/impl/: Camera.cpp  ParticleRenderer.cpp  RenderWindow.cpp  TerrainCreater.cpp  TextRenderer.cpp
OpenGL Renderer/src/Shader/: Shader.h  ShaderManager.h
OpenGL Renderer/src/Shader/GLShaders/: CubeMap.frag  CubeMap.vert  Lightning.frag  Lightning.vert  Normal.frag  Normal.vert  Particle.frag  Particle.geom  Particle.vert  Post.frag  Post.vert  Reflection.frag  Reflection.vert  Shadow.vert  Skybox.frag  Skybox.vert  Text.vert  Volume.frag  Volume.vert  basic.frag  basic.fs  basic.vert  basic.vs
OpenGL Renderer/src/Shader/impl/: Shader.cpp  Shader.h  ShaderManager.cpp
lib/: CMakeLists.txt
lib/DLogger/: CMakeLists.txt
lib/DLogger/include/DLogger/: Logger.h  LoggerLevels.h  Platform.h
lib/DLogger/src/: source.cpp
lib/DLogger/src/DLogger/: Logger.cpp
lib/OpenGL Renderer/: CMakeLists.txt
lib/OpenGL Renderer/src/Core/: GLFunctions.h  Platform.h
lib/OpenGL Renderer/src/Core/impl/: GLFunctions.cpp
lib/OpenGL Renderer/src/DataStructure/: EnvironmentMap.h  Light.h  Material.h  Mesh.h  MeshHelper.h  Model.h  RenderObject.h  Scene.h  Skybox.h
lib/OpenGL Renderer/src/DataStructure/impl/: EnvironmentMap.cpp  Light.cpp  Material.cpp  Mesh.cpp  MeshHelper.cpp  Model.cpp  RenderObject.cpp  Scene.cpp  Skybox.cpp
lib/OpenGL Renderer/src/GUI/: Button.h  DebugControl.h  ExposureControl.h  KeyPressFunction.h  ModeControl.h  MovingButton.h  WindowClose.h
lib/OpenGL Renderer/src/GUI/impl/: Button.cpp  DebugControl.cpp  ExposureControl.cpp  ModeControl.cpp  MovingButton.cpp  WindowClose.cpp
lib/OpenGL Renderer/src/IO/: KeyManager.h  ObjLoader.h
lib/OpenGL Renderer/src/IO/impl/: KeyManager.cpp  ObjLoader.cpp
lib/OpenGL Renderer/src/Math/: Functions.h  PerlinNoise.h
lib/OpenGL Renderer/src/Math/impl/: FunctionsDetail.h  PerlinNoise.cpp
lib/OpenGL Renderer/src/OpenGLObjects/: FrameBuffer.h  GBuffer.h  IndexBuffer.h  RenderBuffer.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
lib/OpenGL Renderer/src/OpenGLObjects/impl/: FrameBuffer.cpp  GBuffer.cpp  IndexBuffer.cpp  RenderBuffer.cpp  Texture.cpp  TextureDetail.h  VertexArray.cpp  VertexBuffer.cpp
lib/OpenGL Renderer/src/Renderer/: Camera.h  ParticleRenderer.h  RenderWindow.h  TextRenderer.h  VRRenderer.h
lib/OpenGL Renderer/src/Renderer/impl/: Camera.cpp  ParticleRenderer.cpp  RenderWindow.cpp  TerrainCreater.cpp  TextRenderer.cpp  VRRenderer.cpp
lib/OpenGL Renderer/src/Shader/: Shader.h  ShaderManager.h
lib/OpenGL Renderer/src/Shader/GLShaders/: BasicCompute.glsl  BasicVR.frag  BasicVR.vert  CubeMapConvolution.frag  CubeMapConvolution.vert  Curve.frag  Curve.geom  Curve.vert  DisplayEdges.frag  DisplayEdges.geom  DisplayNormal.frag  DisplayNormal.geom  DisplayNormal.vert  DisplayVertices.geom  DisplayVertices.vert  ERtoCUBE.vert  ERtoCube.frag  GeometryDeferred.frag  GeometryDeferred.vert  LUDBRDF.frag  LUDBRDF.vert  LUTBRDF.frag  LightDeferred.frag  LightDeferred.vert  LightDeferrred.frag  Normal.frag  Normal.vert  Prefilter.frag  Shadow.vert  Text.frag  Text.vert  VRScreen.frag  VRScreen.vert  Volume.frag  Water.frag  Water.vert  basic.vert
lib/OpenGL Renderer/src/Shader/impl/: Shader.cpp  ShaderManager.cpp
res/: cornell_box.gltf
res/Sponza/: Sponza.gltf
src/: CMakeLists.txt
src/DancingBall/: CMakeLists.txt  source.cpp
src/DeferredRenderer/: CMakeLists.txt  source.cpp
src/DumpProject/: CMakeLists.txt  source.cpp
src/GeometryProcessing/: CMakeLists.txt  source.cpp
src/PBR/: CMakeLists.txt  source.cpp
src/TestScene/: CMakeLists.txt  source.cpp
src/VRViewer/: CMakeLists.txt  source.cpp
src/WaterScene/: CMakeLists.txt  source.cpp
